# MagicHands

./: .gitignore  .lldbinit  AGENTS.md  API.md  CMakeLists.txt  CRIB_SCORING_FIX.md  ENGINE_WARPS_IMPLEMENTATION.md  GAMEPLAY_WARPS_IMPLEMENTATION.md  ISSUES.MD  PHASE3_COMPLETE.md  PHASE3_FIXES_COMPLETE.md  QA_BOT_COMPLETE.md  QA_BOT_IMPLEMENTATION.md  QA_BOT_README.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PROGRESS.md  STARTING_ADVANTAGES_SUMMARY.md  WARPS_IMPLEMENTATION.md  WARP_FIX_SUMMARY.md
.opencode/: project_outline.md
content/: asset_config.json  assets.json
content/audio/: events.json
content/audio/sfx/: organic-water-snap-9.flac
content/data/: achievements.json
content/data/bosses/: the_auditor.json  the_breaker.json  the_collapser.json  the_counter.json  the_dealer.json  the_drain.json  the_minimalist_boss.json  the_purist.json  the_skunk.json  the_tyrant.json  the_wall.json  thirty_one.json
content/data/enhancements/: planet_15.json  planet_asteroid.json  planet_comet.json  planet_earth.json  planet_fifteen.json  planet_flush.json  planet_jupiter.json  planet_mars.json  planet_mercury.json  planet_moon.json  planet_nebula.json  planet_neptune.json  planet_noble.json  planet_pair.json  planet_pluto.json  planet_run.json  planet_saturn.json  planet_sun.json  planet_triad.json  planet_uranus.json  planet_venus.json  spectral_echo.json
content/data/imprints/: cascade.json  clutch.json  crown.json  dividend.json  echo.json  fractal.json  gold_inlay.json  insurance.json  investment.json  lucky_pips.json  majority.json  mimic.json  minority.json  mint.json  nullifier.json  opener.json  pulse.json  resonance.json  ripple.json  spark.json  steel_plating.json  suit_shifter.json  tax.json  underdog.json  wildcard_imprint.json
content/data/jokers/: ace_in_hole.json  ace_power_tiered.json  (+38 more)
content/scripts/: Camera.lua  Core.lua  ObjectPool.lua  gdd_runner.lua  main.lua  test_blinds.lua  test_card_padding.lua  test_cards.lua  test_cribbage.lua  test_deck_sculpting.lua  test_enhancement_shop.lua  test_gdd.lua  test_gdd_alignment.lua  test_imprints.lua  test_jokers.lua  test_phase1.lua  test_shop.lua  test_text_centering.lua  test_warps.lua
content/shaders/: crt.metal
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_INTEGRATION.md  CampaignState_Rank_Fixes.md  DOCUMENTATION_CORRECTIONS.md  Debug_Settings_Button_Issue.md  Font_Loading_Fix.md  GDD.MD  GameScene_Layout_Refactor.md  GameScene_UI_Scaling_Solution.md  HOT_RELOAD_AUDIO_FIX_PLAN.md  INTEGRATION_CHECKLIST.md  JOKER_QUICK_REFERENCE.md  JOKER_SYSTEM.md  JOKER_TIER_SYSTEM.md  MenuScene_Implementation.md  MenuScene_Visual.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_ALL_FIXES.md  PHASE3_ARCHITECTURE.md  PHASE3_COMPLETE.md  PHASE3_FIX_SUMMARY.md  PHASE3_GRAPHICS_API_FIX.md  PHASE3_IMPRINT_FIX.md  PHASE3_INTEGRATION_COMPLETE.md  PHASE3_MODULE_ARCHITECTURE.md  PHASE3_PLAN.md  PHASE3_PROGRESS.md  PHASE3_REMAINING_GRAPHICS_FIXES.md  PHASE3_REMAINING_LOVE2D_CALLS.md  PHASE3_RUNTIME_FIXES.md  PHASE3_TROUBLESHOOTING.md  Phase1_Existing_UI_Refactor.md  Phase1_Implementation_Summary.md  Phase2_Integration_Complete.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.MD  SCULPTOR_COMPLETE.md  (+13 more)
docs/engine-features/: features.md  lua-debugger.md  native-pathfinding.md  profiler.md  scene-state-management.md  spatial-partitioning.md  y-sorting.md
engine/lua/: Console.lua  DebugCommands.lua  Scenes.lua
qa_results/: run_20260130_204545_001.json  run_20260130_204548_002.json  run_20260130_204552_003.json  run_20260130_204554_004.json  run_20260130_204558_005.json  run_20260130_204601_006.json  run_20260130_204606_007.json  run_20260130_204610_008.json  run_20260130_204612_009.json  run_20260130_204616_010.json  run_20260130_204618_011.json  run_20260130_204622_012.json  run_20260130_204626_013.json  run_20260130_204630_014.json  run_20260130_204632_015.json  run_20260130_204634_016.json  run_20260130_204638_017.json  run_20260130_204644_018.json  run_20260130_204647_019.json  run_20260130_204652_020.json  run_20260130_204704_001.json  run_20260130_204709_002.json  run_20260130_204712_003.json  run_20260130_204716_004.json  run_20260130_204728_005.json  run_20260130_204732_006.json  run_20260130_204745_007.json  run_20260130_204758_008.json  run_20260130_204812_009.json  run_20260130_204817_010.json  run_20260130_204822_011.json  run_20260130_204832_012.json  run_20260130_204847_013.json  run_20260130_204854_014.json  run_20260130_204900_015.json  run_20260130_204905_016.json  run_20260130_204910_017.json  run_20260130_204915_018.json  run_20260130_204920_019.json  run_20260130_204923_020.json
src/asset/: AssetConfig.cpp  AssetConfig.h  AssetError.h  AssetManager.cpp  AssetManager.h  AssetManager.inl  AssetTypes.h
src/audio/: AudioSystem.cpp  AudioSystem.h
src/core/: Base64.cpp  Base64.h  Color.h  Engine.cpp  Engine.h  JsonUtils.cpp  JsonUtils.h  Logger.cpp  Logger.h  ObjectPool.h  Profiler.h  Result.h  SpatialIndex.cpp  SpatialIndex.h  WindowManager.cpp  WindowManager.h  main.cpp  pch.h
src/events/: EventSystem.cpp  EventSystem.h
src/graphics/: Animation.cpp  Animation.h  DebugDraw.cpp  DebugDraw.h  FontRenderer.cpp  FontRenderer.h  ParticleSystem.cpp  ParticleSystem.h  SpriteRenderer.cpp  SpriteRenderer.h
src/input/: InputManager.cpp  InputManager.h  InputSystem.cpp  InputSystem.h
src/pathfinding/: Pathfinder.cpp  Pathfinder.h
src/physics/: NoiseGenerator.cpp  NoiseGenerator.h  PhysicsSystem.cpp  PhysicsSystem.h
src/scripting/: BlindBindings.cpp  CardBindings.cpp  CribbageBindings.cpp  JokerBindings.cpp  LuaBindings.cpp  LuaBindings.h  PathfindingBindings.cpp  ProfilerBindings.cpp  ProfilerBindings.h  SpatialBindings.cpp  TileMapBindings.cpp  WindowManagerBindings.cpp
src/tilemap/: ObjectLayer.cpp  ObjectLayer.h  TileLayer.cpp  TileLayer.h  TileMap.cpp  TileMap.h  TileSet.cpp  TileSet.h
src/ui/: UILayout.cpp  UILayout.h  UISystem.cpp  UISystem.h
tests/: TestBase64.cpp  TestJokerConditions.cpp  TestJokerCounters.cpp  TestJokerEffects.cpp  test_result.cpp
tools/: generate_atlas.py
(+133 files in other folders)
